--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="absolutemusic" default="build">
+<project name="BestSellerSort" default="build">
     <target name="build" depends="lint" />
     <target name="lint" depends="lint-php,lint-xml" />
 
